--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
 /node_modules
 /.pnp
 .pnp.js
+/public/*.ico
+/public/*.png
+discord-clone.code-workspace
 
 # testing
 /coverage
